# Perfect-Portable-Converter

./: .gitignore  AUTO-PUSH.sh  CHANGELOG-CLEANUP.md  CHANGELOG-v2.md  CHANGELOG.md  CLEANUP-BAT.sh  CLEANUP-OLD-FILES.bat  DOWNLOAD.md  FIX-START-BAT.md  GUI-COMPARISON.md  IMPLEMENTATION-SUMMARY.md  INSTALL-INSTRUCTIONS.md  LICENSE  MIGRATION_SUMMARY.md  MODERN-GUI-FEATURES.md  PPC-Core.ps1  PPC-GUI-Complete.ps1  PPC-GUI-Dark.ps1  PPC-GUI-Final.ps1  PPC-GUI-Modern-Clean.ps1  PPC-GUI-Modern-v2.ps1  PPC-GUI-Modern-v3.ps1  PPC-GUI-Modern.ps1  PPC-GUI-Modern.ps1.backup  PPC-GUI-Ultimate-v2.ps1  PPC-GUI-Ultimate-v3.ps1  PPC-GUI-Ultimate.ps1  PPC-GUI-WPF-Demo.ps1  PPC-GUI.ps1  PPC-HandBrake.ps1  PPC-Themes.ps1  PPC.ps1  PUSH-ADD-FILES-FIX.sh  PUSH-ADDTYPE-FIX.sh  PUSH-BIGGER-FONTS.sh  PUSH-CLEAN-UI.sh  PUSH-DARK-THEME.sh  PUSH-DEBUG.sh  PUSH-DOUBLEBUFFER-FIX.sh  PUSH-DOWNLOAD-PROGRESS.sh  (+36 more)
.github/workflows/: build-offline-zip.yml  build.yml  chatgpt-assistant.yml  ci.yml  deepscan.yml  replace-with-offline-ppc.yml  test-push.yml
config/: defaults.json  themes.json
examples/: example_watermark_usage.c
gtk/src/: subtitle_editor_gui.c  watermark_gui.c
libhb/: subtitle_style_extended.c  subtitle_style_extended.h  watermark_extended.c  watermark_extended.h
locales/: de.json  en.json  es.json  fr.json  sk.json
scripts/: README.md  deepscan.ps1  handle_comment.js
src/perfect_portable_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ppc/: cli.py
tests/: test_cli.py
ui/: demo.html  themes.css
ui/skins/: skin-dark.css  skin-green.css  skin-modern.css
(+2 files in other folders)
